# Fruit-Ninja

./: LICENSE  MANIFEST.in  PACKAGING_COMPLETE.md  QUICKSTART.md  README.md  README_PACKAGE.md  assets_generator.py  build_package.py  config.py  game_objects.py  hand_tracker.py  main.py  mechanics.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_installation.py  ui.py  visuals.py
ai_fruit_ninja/: __init__.py  __main__.py  game_objects.py  main.py  mechanics.py  ui.py  visuals.py
python-package-template/: .gitignore  README.md  pyproject.toml
python-package-template/cv_fruit_ninja/: __init__.py  core.py  utils.py
python-package-template/package_name/: __init__.py  core.py  utils.py
python-package-template/tests/: test_core.py
