[metadata]
name = ai-fruit-ninja
version = 1.0.0
author = Joe Danields
author_email = joedanields@example.com
description = AI-powered Fruit Ninja game with hand tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joedanields/Fruit-Ninja
project_urls =
    Bug Tracker = https://github.com/joedanields/Fruit-Ninja/issues
    Repository = https://github.com/joedanields/Fruit-Ninja
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Arcade
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pygame>=2.0.0
    opencv-python>=4.5.0
    mediapipe>=0.10.0
    numpy>=1.19.0,<2.0
    importlib-resources>=5.0.0; python_version<"3.9"

[options.packages.find]
exclude =
    tests*
    docs*

[options.package_data]
ai_fruit_ninja = assets/*

[options.entry_points]
console_scripts =
    ai-fruit-ninja = ai_fruit_ninja.main:run_game
